--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,65 @@
-Django==6.0.1
+asgiref            3.11.0
+azure-core         1.38.0
+azure-storage-blob 12.28.0
+brotli             1.2.0
+certifi            2026.1.4
+cffi               2.0.0
+charset-normalizer 3.4.4
+cryptography       46.0.4
+cssselect2         0.8.0
+Django             6.0.1
+django-storages    1.14.6
+fonttools          4.61.1
+idna               3.11
+isodate            0.7.2
+pdf2image          1.17.0
+pillow             12.1.0
+pip                25.3
+pycparser          3.0
+pydyf              0.12.1
+pyphen             0.17.2
+python-decouple    3.8
+requests           2.32.5
+sqlparse           0.5.5
+tinycss2           1.5.1
+tinyhtml5          2.0.0
+typing_extensions  4.15.0
+tzdata             2025.3
+urllib3            2.6.3
+weasyprint         68.0
+webencodings       0.5.1
+zopfli             0.4.0
+asgiref            3.11.0
+azure-core         1.38.0
+azure-storage-blob 12.28.0
+brotli             1.2.0
+certifi            2026.1.4
+cffi               2.0.0
+charset-normalizer 3.4.4
+cryptography       46.0.4
+cssselect2         0.8.0
+Django             6.0.1
+django-storages    1.14.6
+fonttools          4.61.1
+idna               3.11
+isodate            0.7.2
+pdf2image          1.17.0
+pillow             12.1.0
+pip                25.3
+pycparser          3.0
+pydyf              0.12.1
+pyphen             0.17.2
+python-decouple    3.8
+requests           2.32.5
+sqlparse           0.5.5
+tinycss2           1.5.1
+tinyhtml5          2.0.0
+typing_extensions  4.15.0
+tzdata             2025.3
+urllib3            2.6.3
+weasyprint         68.0
+webencodings       0.5.1
+zopfli             0.4.0
+Django             >=4.2
 gunicorn
 whitenoise
-psycopg2-binary
